# voicepad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: codeReview.instructions.md
.github/workflows/: ci.yaml  pre-commit-auto-update.yaml
scripts/: setup.sh  setup_project.sh
src/voicepad/: __init__.py  __main__.py  microphones.py  recorder.py
src/voicepad/ui/: __init__.py  app.py  styles.css
