[project]
name = "voicepad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyperoot", email = "rajesh@hyperoot.dev" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
voicepad = "voicepad:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
